package YouVideo;

interface PodcastAll extends Podcast{
    void addEpisode(String ID, int duration, String URL, String date);
}
