package YouVideo;

import java.util.Locale;

public record Subtitle(Locale lang, String URL) {
}
